--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <div id = "root"></div>
-</body>
+  <head></head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
